objects/Billing_Profile_Additional_Details__x.object
<CustomObject>
    <fields>
        <fullName>BDOM__c</fullName>
        <description>Billing Day of Month</description>
        <externalDeveloperName>BDOM</externalDeveloperName>
        <label>BDOM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BILLINFO_POID__c</fullName>
        <description>BILLINFO_POID</description>
        <externalDeveloperName>BILLINFO_POID</externalDeveloperName>
        <label>BILLINFO_POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_BANK_ACCOUNT_NAME__c</fullName>
        <description>BP_BANK_ACCOUNT_NAME</description>
        <externalDeveloperName>BP_BANK_ACCOUNT_NAME</externalDeveloperName>
        <label>BP_BANK_ACCOUNT_NAME</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CONTACT_NAME__c</fullName>
        <description>BP_CONTACT_NAME</description>
        <externalDeveloperName>BP_CONTACT_NAME</externalDeveloperName>
        <label>BP_CONTACT_NAME</label>
        <length>201</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_LAST_UPDATED_DATE__c</fullName>
        <description>BP_LAST_UPDATED_DATE</description>
        <externalDeveloperName>BP_LAST_UPDATED_DATE</externalDeveloperName>
        <label>BP_LAST_UPDATED_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BP_NAME__c</fullName>
        <description>BP_NAME</description>
        <externalDeveloperName>BP_NAME</externalDeveloperName>
        <label>BP_NAME</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_PAYMENT_METHOD__c</fullName>
        <description>BP_PAYMENT_METHOD</description>
        <externalDeveloperName>BP_PAYMENT_METHOD</externalDeveloperName>
        <label>BP_PAYMENT_METHOD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_PAYMENT_TERM__c</fullName>
        <description>BP_PAYMENT_TERM</description>
        <externalDeveloperName>BP_PAYMENT_TERM</externalDeveloperName>
        <label>BP_PAYMENT_TERM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_STATUS__c</fullName>
        <description>BP_STATUS</description>
        <externalDeveloperName>BP_STATUS</externalDeveloperName>
        <label>BP_STATUS</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Media__c</fullName>
        <description>Paper or Email</description>
        <externalDeveloperName>MEDIA_TYPE</externalDeveloperName>
        <label>Bill Media</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_EXPIRATION_MONTH__c</fullName>
        <description>CC_EXPIRATION_MONTH</description>
        <externalDeveloperName>CC_EXPIRATION_MONTH</externalDeveloperName>
        <label>CC_EXPIRATION_MONTH</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_EXPIRATION_YEAR__c</fullName>
        <description>CC_EXPIRATION_YEAR</description>
        <externalDeveloperName>CC_EXPIRATION_YEAR</externalDeveloperName>
        <label>CC_EXPIRATION_YEAR</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_TYPE__c</fullName>
        <description>CC_TYPE</description>
        <externalDeveloperName>CC_TYPE</externalDeveloperName>
        <label>CC_TYPE</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFT_CC_NUMBER__c</fullName>
        <description>number for EFT or CC whichever is applicable</description>
        <externalDeveloperName>EFT_CC_NUMBER</externalDeveloperName>
        <label>EFT_CC_NUMBER</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ON_CC__c</fullName>
        <description>NAME_ON_CC</description>
        <externalDeveloperName>NAME_ON_CC</externalDeveloperName>
        <label>NAME_ON_CC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY__c</fullName>
        <description>PRIMARY</description>
        <externalDeveloperName>PRIMARY</externalDeveloperName>
        <label>PRIMARY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIEBEL_BP_ROW_ID__c</fullName>
        <description>SIEBEL_BP_ROW_ID</description>
        <externalDeveloperName>SIEBEL_BP_ROW_ID</externalDeveloperName>
        <label>SIEBEL_BP_ROW_ID</label>
        <length>180</length>
        <type>Text</type>
    </fields>
</CustomObject>